# freesound-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/freesound_mcp_server/: freesound.py
